[project]
name = "demonalone-nodes-comfyui"
description = "A collection of nodes that provide dynamic dropdown selectors for Samplers, Schedulers, Checkpoints, and Diffusion Models, outputting a comma-separated string for use in XY plots."
version = "1.6.0"
license = {file = "LICENSE"} 
# classifiers = [
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
# ]


[project.urls]
Repository = "https://github.com/DemonAlone/DemonAlone-nodes-ComfyUI"
#  Used by Comfy Registry https://registry.comfy.org
"Bug Tracker" = "https://github.com/DemonAlone/DemonAlone-nodes-ComfyUI/issues"

[tool.comfy]
PublisherId = "demonalone"
DisplayName = "DemonAlone-nodes-ComfyUI"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility
